crates/mabo-kotlin/tests/snapshots/render__render@types_ref.mabo.snap
---
source: crates/mabo-kotlin/tests/render.rs
description: "struct Sample {\n    basic: Test123 @1,\n    with_generics: KeyValue<u32, bool> @2,\n}\n\nenum Test123 {\n    Value @1,\n}\n\nstruct KeyValue<K, V> {\n    key: K @1,\n    value: V @2,\n}"
input_file: crates/mabo-parser/tests/inputs/types_ref.mabo
---
--- sample.kt

package sample

import java.math.BigInteger
import java.nio.ByteBuffer
import kotlin.UByte
import kotlin.UShort
import kotlin.UInt
import kotlin.ULong

import rocks.dnaka91.mabo.*
import rocks.dnaka91.mabo.buf.*

public data class Sample(
    val basic: Test123,
    val withGenerics: KeyValue<UInt, Boolean>,
) : Decode, Encode Size {
    override fun encode(w: ByteBuffer) {
        Encoder.encodeField(w, 1, { w -> this.Basic.encode(w) })
        Encoder.encodeField(w, 2, { w -> this.WithGenerics.encode(w) })
        Encoder.encodeU32(w, END_MARKER)
    }

    override fun size(): Int = 0
        + Sizer.sizeField(1, { this.Basic.size() })
        + Sizer.sizeField(2, { this.WithGenerics.size() })
        + Sizer.sizeFieldId(END_MARKER)

}

public sealed interface Test123 {
    public object Value : Test123, Decode, Encode, Size {
        override fun size(): Int = Sizer.sizeVariantId(1)

    }
}

public data class KeyValue<K, V>(
    val key: K,
    val value: V,
) : Decode, Encode Size {
    override fun encode(w: ByteBuffer) {
        Encoder.encodeField(w, 1, { w -> this.Key.encode(w) })
        Encoder.encodeField(w, 2, { w -> this.Value.encode(w) })
        Encoder.encodeU32(w, END_MARKER)
    }

    override fun size(): Int = 0
        + Sizer.sizeField(1, { this.Key.size() })
        + Sizer.sizeField(2, { this.Value.size() })
        + Sizer.sizeFieldId(END_MARKER)

}


